--- a/reviews.html
+++ b/reviews.html
@@ -68,11 +68,12 @@
                 <p class="blocks1_text2_txt">Вениамин Николаев</p>
                 <img class="blocks1_text2_img" src="../Reviews/img/Ellipse 21.svg">
             </div></div>
-            <div class="blocks_1"><div class="blocks1_text1">Вода медленно нагревается благодаря высокой теплоемкости, но тем не менее процесс остывания происходит намного медленнее. Это дает возможность в летнее время года накапливать тепло океанам и морям, а высвобождение тепла происходит в зимний период, именно поэтому нет резкого перепада температуры воздуха на территории нашей </div>
-            <div class="blocks1_text2">
-                <p class="blocks1_text2_txt">Вениамин Николаев</p>
-                <img class="blocks1_text2_img" src="../Reviews/img/Ellipse 21.svg">
-            </div></div>
+            <div class="blocks_1">
+                <div class="blocks1_text1">Вода медленно нагревается благодаря высокой теплоемкости, но тем не менее процесс остывания происходит намного медленнее. Это дает возможность в летнее время года накапливать тепло океанам и морям, а высвобождение тепла происходит в зимний период, именно поэтому нет резкого перепада температуры воздуха на территории нашей </div>
+                     <div class="blocks1_text2">
+                    <p class="blocks1_text2_txt">Вениамин Николаев</p>
+                    <img class="blocks1_text2_img" src="../Reviews/img/Ellipse 21.svg">
+                </div></div>
             <div class="blocks_1"><div class="blocks1_text1">Вода медленно нагревается благодаря высокой теплоемкости, но тем не менее процесс остывания происходит намного медленнее. Это дает возможность в летнее время года накапливать тепло океанам и морям, а высвобождение тепла происходит в зимний период, именно поэтому нет резкого перепада температуры воздуха на территории нашей </div>
             <div class="blocks1_text2">
                 <p class="blocks1_text2_txt">Вениамин Николаев</p>
