--- a/index.html
+++ b/index.html
@@ -6,14 +6,16 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <link rel="stylesheet" href="/assets/css/style.css"> 
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+        <script src="assets/js/jquery-3.6.3.min.js"></script>
     </head> 
     <body> 
-        <div class="wrapper">
-
-          </div>
         <header>
-            <nav>
-                <div class="logo">OLLE</div>
+            <div class="logo">OLLE</div>
+            <div class="header-burger">
+                <span></span>
+            </div>
+            <div class="header-menu">
+              
                 <ul class="navbar">
                     <li>
                         <a href="/index.html">Главная</a> 
@@ -36,7 +38,7 @@
                     <button class="call">Заказать обратный звонок</button>
                     <img src="/assets/img/basket.png" alt="basket" class="basket">
                 </ul>
-            </nav>
+            </div>
         </header>
         <div class="fixedContainer">
             <img src="/assets/img/banka.png" alt="banka" class="banka">
@@ -183,4 +185,5 @@
         </nav>
      </footer>
     </body> 
+    <script src="/assets/js/script.js"></script>
 </html>
