--- a/catalog.html
+++ b/catalog.html
@@ -40,6 +40,28 @@
                 </ul>
             </div>
         </header>
+        <div class="header_popup">
+            <div class="header_popup_text_redblock">
+            <div class="header_popup_content">
+                <div class="header_popup_text">
+                    
+                    <div class="header_popup_text_clouse">X</div>
+                    <h3 class="header_popup_text_title">
+                        Свяжитесь с нами
+                    </h3>
+                    <p class="header_popup_text_text">
+                        Оставьте свои контактные данные, чтобы наш менеджер смог связаться с Вами в ближайшее время.
+                    </p>
+                    <div class="header_popup_form">
+                    <input type="text" class="header_popup_form_placeaholder">
+                    <input type="text" class="header_popup_form_placeaholder">
+                    <input type="number" class="header_popup_form_placeaholder">
+                    <a href="#" class="header_popup_form_placeaholder_button">Отправить</a>
+                </div>
+            </div>
+                </div>
+            </div>
+        </div>
         <div class="popup_box">
             <div class="popup_content">
                 <div class="popup_text">
