--- a/catalog.html
+++ b/catalog.html
@@ -70,7 +70,7 @@
                     <img src="/assets/img/bankaOne.png" alt="bankaOne" class="banka_map">
                 </div>
                 <div class="content">
-                <h3 class="title_map">Средство для чистки кофемашин в порошке Ollee</h3>
+                <h3 class="title_map" style="font-size: 100px;">Жека ты пидор</h3>
                 <div class="redString_map">
                     <div class="redblock_map"></div>
                         <div class="text_map">Очистика профессианальной кофемашины от ммаасел и<br> жиров </div>
