--- a/reviews.html
+++ b/reviews.html
@@ -50,41 +50,40 @@
 
 <body>
     <div class="container">
-        <р1
-         class="block1_text1">Отзывы наших клиентов</р>
-        <div class="blocks">
-                <p class="blocks1_text1">Вода медленно нагревается благодаря высокой теплоемкости, но тем не менее процесс остывания происходит намного медленнее. Это дает возможность в летнее время года накапливать тепло океанам и морям, а высвобождение тепла происходит в зимний период, именно поэтому нет резкого перепада температуры воздуха на территории нашей </p>
-                    <p class="blocks1_text2_txt">Вениамин Николаев</p>
-                    <img class="blocks1_text2_img" src="../Reviews/img/Ellipse 21.svg">
+        <p class="title">Отзывы наших клиентов</p>
+        <div class="content">
+            <div class="content_block">
+                <p class="content_block_text1">Вода медленно нагревается благодаря высокой теплоемкости, но тем не менее процесс остывания происходит намного медленнее. Это дает возможность в летнее время года накапливать тепло океанам и морям, а высвобождение тепла происходит в зимний период, именно поэтому нет резкого перепада температуры воздуха на территории нашей</p>
+                <div class="content_block_source">
+                    <p class="content_block_text2">Вениамин Николев</p>
+                <img class="content_block_img" src="/assets/img/Ellipse 21.svg">
                 </div>
             </div>
-            <div class="blocks_1"><div class="blocks1_text1">Вода медленно нагревается благодаря высокой теплоемкости, но тем не менее процесс остывания происходит намного медленнее. Это дает возможность в летнее время года накапливать тепло океанам и морям, а высвобождение тепла происходит в зимний период, именно поэтому нет резкого перепада температуры воздуха на территории нашей </div>
-            <div class="blocks1_text2">
-                <p class="blocks1_text2_txt">Вениамин Николаев</p>
-                <img class="blocks1_text2_img" src="../Reviews/img/Ellipse 21.svg">
-            </div></div>
-            <div class="blocks_1"><div class="blocks1_text1">Вода медленно нагревается благодаря высокой теплоемкости, но тем не менее процесс остывания происходит намного медленнее. Это дает возможность в летнее время года накапливать тепло океанам и морям, а высвобождение тепла происходит в зимний период, именно поэтому нет резкого перепада температуры воздуха на территории нашей </div>
-            <div class="blocks1_text2">
-                <p class="blocks1_text2_txt">Вениамин Николаев</p>
-                <img class="blocks1_text2_img" src="../Reviews/img/Ellipse 21.svg">
-            </div></div>
-            <div class="blocks_1">
-                <div class="blocks1_text1">Вода медленно нагревается благодаря высокой теплоемкости, но тем не менее процесс остывания происходит намного медленнее. Это дает возможность в летнее время года накапливать тепло океанам и морям, а высвобождение тепла происходит в зимний период, именно поэтому нет резкого перепада температуры воздуха на территории нашей </div>
-                     <div class="blocks1_text2">
-                    <p class="blocks1_text2_txt">Вениамин Николаев</p>
-                    <img class="blocks1_text2_img" src="../Reviews/img/Ellipse 21.svg">
+            <div class="content_block"><p class="content_block_text1">Вода медленно нагревается благодаря высокой теплоемкости, но тем не менее процесс остывания происходит намного медленнее. Это дает возможность в летнее время года накапливать тепло океанам и морям, а высвобождение тепла происходит в зимний период, именно поэтому нет резкого перепада температуры воздуха на территории нашей</p>
+                <div class="content_block_source">
+                    <p class="content_block_text2">Вениамин Николев</p>
+                <img class="content_block_img" src="/assets/img/Ellipse 21.svg">
                 </div></div>
-            <div class="blocks_1"><div class="blocks1_text1">Вода медленно нагревается благодаря высокой теплоемкости, но тем не менее процесс остывания происходит намного медленнее. Это дает возможность в летнее время года накапливать тепло океанам и морям, а высвобождение тепла происходит в зимний период, именно поэтому нет резкого перепада температуры воздуха на территории нашей </div>
-            <div class="blocks1_text2">
-                <p class="blocks1_text2_txt">Вениамин Николаев</p>
-                <img class="blocks1_text2_img" src="../Reviews/img/Ellipse 21.svg">
-            </div></div>
-            <div class="blocks_1"><div class="blocks1_text1">Вода медленно нагревается благодаря высокой теплоемкости, но тем не менее процесс остывания происходит намного медленнее. Это дает возможность в летнее время года накапливать тепло океанам и морям, а высвобождение тепла происходит в зимний период, именно поэтому нет резкого перепада температуры воздуха на территории нашей </div>
-            <div class="blocks1_text2">
-                <p class="blocks1_text2_txt">Вениамин Николаев</p>
-                <img class="blocks1_text2_img" src="../Reviews/img/Ellipse 21.svg">
-            </div>
-            </div>
+            <div class="content_block"><p class="content_block_text1">Вода медленно нагревается благодаря высокой теплоемкости, но тем не менее процесс остывания происходит намного медленнее. Это дает возможность в летнее время года накапливать тепло океанам и морям, а высвобождение тепла происходит в зимний период, именно поэтому нет резкого перепада температуры воздуха на территории нашей</p>
+                <div class="content_block_source">
+                    <p class="content_block_text2">Вениамин Николев</p>
+                <img class="content_block_img" src="/assets/img/Ellipse 21.svg">
+                </div></div>
+            <div class="content_block"><p class="content_block_text1">Вода медленно нагревается благодаря высокой теплоемкости, но тем не менее процесс остывания происходит намного медленнее. Это дает возможность в летнее время года накапливать тепло океанам и морям, а высвобождение тепла происходит в зимний период, именно поэтому нет резкого перепада температуры воздуха на территории нашей</p>
+                <div class="content_block_source">
+                    <p class="content_block_text2">Вениамин Николев</p>
+                <img class="content_block_img" src="/assets/img/Ellipse 21.svg">
+                </div></div>
+            <div class="content_block"><p class="content_block_text1">Вода медленно нагревается благодаря высокой теплоемкости, но тем не менее процесс остывания происходит намного медленнее. Это дает возможность в летнее время года накапливать тепло океанам и морям, а высвобождение тепла происходит в зимний период, именно поэтому нет резкого перепада температуры воздуха на территории нашей</p>
+                <div class="content_block_source">
+                    <p class="content_block_text2">Вениамин Николев</p>
+                <img class="content_block_img" src="/assets/img/Ellipse 21.svg">
+                </div></div>
+            <div class="content_block"><p class="content_block_text1">Вода медленно нагревается благодаря высокой теплоемкости, но тем не менее процесс остывания происходит намного медленнее. Это дает возможность в летнее время года накапливать тепло океанам и морям, а высвобождение тепла происходит в зимний период, именно поэтому нет резкого перепада температуры воздуха на территории нашей</p>
+                <div class="content_block_source">
+                    <p class="content_block_text2">Вениамин Николев</p>
+                <img class="content_block_img" src="/assets/img/Ellipse 21.svg">
+                </div></div>
         </div>
     </div>
 </body>
