--- a/index.html
+++ b/index.html
@@ -40,6 +40,75 @@
                 </ul>
             </div>
         </header>
+        <div class="popup-fade">
+           
+            <div class="popup">
+                    <div class="shop_popup-box">
+                        <div class="shop_popup_content">
+                            <a class="popup-close" href="#">X</a>
+                            <div class="images">
+                                <img src="/assets/img/bankaOne.png" alt="bankaOne" class="banka_shop_popup">
+                            </div>
+                            <div class="popup_content">
+                            <h4 class="popup_title_map">Средство для чистки кофемашин в порошке Ollee</h3>
+                            <div class="popup_redString_map">
+                                <div class="popup_redblock_map"></div>
+                                    <div class="popup_text_map">Очистика профессианальной кофемашины от ммаасел и<br> жиров </div>
+                            </div>
+                            <div class="popup_redString_map">
+                                <div class="popup_redblock_map"></div>
+                                    <div class="popup_text_map">Очистика профессианальной кофемашины от ммаасел и<br> жиров </div>
+                            </div>
+                            <div class="popup_redString_map">
+                                <div class="popup_redblock_map"></div>
+                                    <div class="popup_text_map">Очистика профессианальной кофемашины от ммаасел и<br> жиров </div>
+                            </div>
+                            <div class="popup_redString_map">
+                                <div class="popup_redblock_map"></div>
+                                    <div class="popup_text_map">Очистика профессианальной кофемашины от ммаасел и<br> жиров </div>
+                            </div>
+                            <p class="popup_description">
+                                Olle - профессиональное чистящее средство для удаления<br>кофейных масел с элементов блока подачи (носик крана, фильтр, чаша крепления фильтра) и выпускного клапана эспрессо кофе-машин. Деодорирует, очищает и способствует эффективной подаче, быстро и полностью удаляя любые органические остатки, не повреждая хромированные части металлической поверхности машины.
+                            </p>
+                            <a href="#" class="button-buy">Купить</a>
+                        </div>
+                    </div>
+                 </div>
+        </div>
+        </div>
+        <!-- <div class="shop_popup">
+            <div class="shop_popup-box">
+                <div class="shop_popup_content">
+                    <div class="clouse">X</div>
+                    <div class="images">
+                        <img src="/assets/img/bankaOne.png" alt="bankaOne" class="banka_shop_popup">
+                    </div>
+                    <div class="popup_content">
+                    <h4 class="popup_title_map">Средство для чистки кофемашин в порошке Ollee</h3>
+                    <div class="popup_redString_map">
+                        <div class="popup_redblock_map"></div>
+                            <div class="popup_text_map">Очистика профессианальной кофемашины от ммаасел и<br> жиров </div>
+                    </div>
+                    <div class="popup_redString_map">
+                        <div class="popup_redblock_map"></div>
+                            <div class="popup_text_map">Очистика профессианальной кофемашины от ммаасел и<br> жиров </div>
+                    </div>
+                    <div class="popup_redString_map">
+                        <div class="popup_redblock_map"></div>
+                            <div class="popup_text_map">Очистика профессианальной кофемашины от ммаасел и<br> жиров </div>
+                    </div>
+                    <div class="popup_redString_map">
+                        <div class="popup_redblock_map"></div>
+                            <div class="popup_text_map">Очистика профессианальной кофемашины от ммаасел и<br> жиров </div>
+                    </div>
+                    <p class="popup_description">
+                        Olle - профессиональное чистящее средство для удаления<br>кофейных масел с элементов блока подачи (носик крана, фильтр, чаша крепления фильтра) и выпускного клапана эспрессо кофе-машин. Деодорирует, очищает и способствует<br>эффективной подаче, быстро и полностью удаляя любые органические остатки, не повреждая хромированные части металлической поверхности машины. Olle имеет сертификат NSF  подтверждающий его совместимость с металлами и безопасность.
+                    </p>
+
+                </div>
+            </div>
+         </div>
+         </div> -->
         <div class="fixedContainer">
             <img src="/assets/img/banka.png" alt="banka" class="banka">
             <img src="/assets/img/bankaOne.png" alt="bankaOne" class="bankaOne">
