--- a/catalog.html
+++ b/catalog.html
@@ -65,12 +65,12 @@
         <div class="popup_box">
             <div class="popup_content">
                 <div class="popup_text">
-                    <div class="clouse">X</div>
+                    <div class="clouse">закрыть</div>
                 <div class="images">
                     <img src="/assets/img/bankaOne.png" alt="bankaOne" class="banka_map">
                 </div>
                 <div class="content">
-                <h3 class="title_map" style="font-size: 100px;">Жека ты пидор</h3>
+                <h3 class="title_map">Средство для чистки кофемашин в порошке Ollee</h3>
                 <div class="redString_map">
                     <div class="redblock_map"></div>
                         <div class="text_map">Очистика профессианальной кофемашины от ммаасел и<br> жиров </div>
