--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     </head> 
     <body> 
         <header>
-            <div class="logo">OLLE</div>
+           
             <div class="header-burger">
                 <span></span>
             </div>
             <div class="header-menu">
-              
+                <div class="logo">OLLE</div>    
                 <ul class="navbar">
                     <li>
                         <a href="/index.html">Главная</a> 
@@ -36,7 +36,6 @@
                         <a href="/contacts.html">Контакты</a> 
                     </li>
                     <button class="call">Заказать обратный звонок</button>
-                    <img src="/assets/img/basket.png" alt="basket" class="basket">
                 </ul>
             </div>
         </header>
@@ -135,7 +134,7 @@
                 <div class="redblock"></div>
                     <div class="redtext">Убирает нежелательные примеси и привкус </div>
             </div>
-            <a href="#" class="linkShop">Весь каталог</a>
+            <a href="/catalog.html" class="linkShop">Весь каталог</a>
         </div>
         <div class="aboutUs">
             <h2 class="aboutUsTitle">
@@ -175,7 +174,7 @@
             <img src="/assets/img/bankaOne.png" alt="banka1" class="sliderItem">
             <img src="/assets/img/bankaOne.png" alt="banka1" class="sliderItem">
             <img src="/assets/img/bankaOne.png" alt="banka1" class="sliderItem">
-            <a href="#" class="buttonShop">Весь каталог</a>
+            <a href="/catalog.html" class="buttonShop">Весь каталог</a>
         </div>
      </div>
      <div class="partners">
@@ -230,19 +229,22 @@
             <div class="logoFooter">OLLE</div>
             <ul class="navbarFooter">
                 <li>
-                    Главная
+                    <a href="/index.html">Главная</a> 
                 </li>
                 <li>
-                    О нас
+                    <a href="/catalog.html">Каталог</a> 
                 </li>
                 <li>
-                    Магазин
+                    <a href="/aboutUs.html">О нас</a> 
                 </li>
                 <li>
-                    Контакты
+                    <a href="/reviews.html">Отзывы</a> 
+                 </li>
+                <li>
+                    <a href="/delivery.html">Доставка</a> 
                 </li>
                 <li>
-                    Доставка
+                    <a href="/contacts.html">Контакты</a> 
                 </li>
             </ul>
             <img src="/assets/img/tg.png" alt="tg" class="tgFooter">
