--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     </head> 
     <body> 
         <header>
-           
+            <div class="logo">OLLE</div>
             <div class="header-burger">
                 <span></span>
             </div>
             <div class="header-menu">
-                <div class="logo">OLLE</div>    
+              
                 <ul class="navbar">
                     <li>
                         <a href="/index.html">Главная</a> 
@@ -36,6 +36,7 @@
                         <a href="/contacts.html">Контакты</a> 
                     </li>
                     <button class="call">Заказать обратный звонок</button>
+                    <img src="/assets/img/basket.png" alt="basket" class="basket">
                 </ul>
             </div>
         </header>
@@ -134,7 +135,7 @@
                 <div class="redblock"></div>
                     <div class="redtext">Убирает нежелательные примеси и привкус </div>
             </div>
-            <a href="/catalog.html" class="linkShop">Весь каталог</a>
+            <a href="#" class="linkShop">Весь каталог</a>
         </div>
         <div class="aboutUs">
             <h2 class="aboutUsTitle">
@@ -174,7 +175,7 @@
             <img src="/assets/img/bankaOne.png" alt="banka1" class="sliderItem">
             <img src="/assets/img/bankaOne.png" alt="banka1" class="sliderItem">
             <img src="/assets/img/bankaOne.png" alt="banka1" class="sliderItem">
-            <a href="/catalog.html" class="buttonShop">Весь каталог</a>
+            <a href="#" class="buttonShop">Весь каталог</a>
         </div>
      </div>
      <div class="partners">
@@ -229,22 +230,19 @@
             <div class="logoFooter">OLLE</div>
             <ul class="navbarFooter">
                 <li>
-                    <a href="/index.html">Главная</a> 
+                    Главная
                 </li>
                 <li>
-                    <a href="/catalog.html">Каталог</a> 
+                    О нас
                 </li>
                 <li>
-                    <a href="/aboutUs.html">О нас</a> 
+                    Магазин
                 </li>
                 <li>
-                    <a href="/reviews.html">Отзывы</a> 
-                 </li>
-                <li>
-                    <a href="/delivery.html">Доставка</a> 
+                    Контакты
                 </li>
                 <li>
-                    <a href="/contacts.html">Контакты</a> 
+                    Доставка
                 </li>
             </ul>
             <img src="/assets/img/tg.png" alt="tg" class="tgFooter">
